# Obsolute-Slop

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/db/: database.py  models.py
app/repos/: chat.py  document.py  vector.py
app/routers/: chat.py  documents.py
app/schemas/: chat.py  document.py
app/services/: chat.py  documents.py  embeddings.py  llm.py  rag.py
app/static/: index.html
nginx/: obsolute-slop.conf
tests/: conftest.py  test_chat_api.py  test_documents_api.py  test_services.py
